Made adjustments to both registration page and login page to address mobile collapsing issue where items would bleed out of overarching container when screen size shrunk. On login page, solved issue by physically removing surrounding divs and adding width to form, on registration page simply added overflow auto on overarching container

--- a/styles/login-register.scss
+++ b/styles/login-register.scss
@@ -8,6 +8,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  overflow: auto;
 }
 
 //All of the following lines have to deal with the login form
@@ -18,6 +19,7 @@
 .login-form {
   display: flex;
   flex-direction: column;
+  width: 55%;
 }
 
 .login-email {
@@ -36,7 +38,7 @@
 
 //All of the following lines have to deal with the registration form
 .register-inputs {
-  width: 26em;
+  // width: 26em;
   display: flex;
   flex-direction: row;
   justify-content: space-between;
